# BeginCoding

./: README.md
MergeDataTool/: .gitignore  CMakeLists.txt  Readme.dm
MergeDataTool/include/: merger.h  random_number_generator.h
MergeDataTool/src/: main.cpp  merger.cpp  random_number_generator.cpp
